--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,12 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+
+variables:
+  - group: VaultSecrets
+  - group: VmImage
+  - group: Build-Varaible
+
 trigger:
 - master
 
